Minor copy changes

--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -22,7 +22,7 @@ label: case-study
             <h4 class="caption"><b>Project type:</b> Enterprise tools</h4>
             <h4 class="caption"><b>Year:</b> 2023</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Rapid prototyping, UX design</h4>
-            <h4 class="caption"><b>Outcome:</b> 100% of users successfully moved to the consolidated app, reduced cost to serve, 2× improvement in CSAT, 3× performance boost in UX team</h4>
+            <h4 class="caption"><b>Outcome:</b> 100% of users successfully moved to consolidated app, reduced cost to serve, 2&times; improvement in CSAT, 3&times; performance boost in UX team</h4>
          </div>
       </div>
    </div>
