--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -6,7 +6,7 @@ label: case-study
 <section>
    <div class="container">
       <h4>Case study</h4>
-      <h1>Going after a new market opportunity with Evinova</h1>
+      <h1>{{ site.data.pages.case-study.evinova.heading }}</h1>
    </div>
 
    <div class="container">
@@ -20,7 +20,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> SaaS B2B</h4>
-            <h4 class="caption"><b>Year:</b> 2024-2025</h4>
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Market research, Rapid prototyping, UX design</h4>
             <h4 class="caption"><b>Outcome:</b> AstraZeneca receives better value from their products, Evinova gains new revenue stream, users can design and optimise better studies</h4>
          </div>
