Add company to case study meta

--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -20,7 +20,8 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Enterprise tools</h4>
-            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.merlin.year }}</h4>
+            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.merlin.company }}</h4>
+            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.merlin.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Rapid prototyping, UX design</h4>
             <h4 class="caption"><b>Outcome:</b> 100% of users successfully moved to consolidated app, reduced cost to serve, 2&times; improvement in CSAT, 3&times; performance boost in UX team</h4>
          </div>
