--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -26,7 +26,8 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
-            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.vivli.year }}</h4>
+            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.vivli.company }}</h4>
+            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.vivli.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Design leadership, Client leadership, UX design, Vision prototyping, Qualitative research</h4>
             <h4 class="caption"><b>Outcome:</b> Vivli successfully secured backing from consortium partners</h4>
          </div>
