--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -20,7 +20,8 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> SaaS B2B</h4>
-            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4>
+            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}</h4>
+            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Market research, Rapid prototyping, UX design</h4>
             <h4 class="caption"><b>Outcome:</b> AstraZeneca receives better value from their products, Evinova gains new revenue stream, users can design and optimise better studies</h4>
          </div>
