--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -20,7 +20,8 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Design Lead & Contributor</h4>
             <h4 class="caption"><b>Project type:</b> Client project</h4>
-            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.immunocore.year }}</h4>
+            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.immunocore.company }}</h4>
+            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.immunocore.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Client leadership, Design direction, Brand design, Science communication</h4>
             <h4 class="caption"><b>Outcome:</b> Brand and science comms materials in use for over a decade (and counting)</h4>
          </div>
