Added cost estimation screen to AZ case

--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -116,6 +116,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
+            <img src="/img/cases/merlin/merlin3.png" class="image-gallery shadow">
             <img src="/img/cases/merlin/merlin1.png" class="image-gallery shadow">
          </div>
       </div>
