Replace image with twitter embed in IMMUNO case

--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -76,8 +76,9 @@ label: case-study
       </div>
 
       <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-tweet.png" class="image-gallery shadow">
+         <div class="block-margin shadow">
+               <blockquote class="twitter-tweet" data-theme="light"><p lang="en" dir="ltr">Welcome to the <a href="https://twitter.com/Nasdaq?ref_src=twsrc%5Etfw">@Nasdaq</a> family, <a href="https://twitter.com/Immunocore?ref_src=twsrc%5Etfw">@Immunocore</a>! 👏<a href="https://twitter.com/hashtag/NasdaqListed?src=hash&amp;ref_src=twsrc%5Etfw">#NasdaqListed</a>: <a href="https://twitter.com/search?q=%24IMCR&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$IMCR</a> <a href="https://t.co/fIQX8VoJqh">pic.twitter.com/fIQX8VoJqh</a></p>&mdash; Nasdaq Exchange (@NasdaqExchange) <a href="https://twitter.com/NasdaqExchange/status/1357735918396989442?ref_src=twsrc%5Etfw">February 5, 2021</a></blockquote>
+               <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
          </div>
       </div>
 
