--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -22,8 +22,8 @@ label: case-study
             <h4 class="caption"><b>Project type:</b> SaaS B2B</h4>
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
-            <h4 class="caption"><b>My contributions:</b> Design leadership, Team leadership, Product strategy, Market research, Rapid prototyping, UX design</h4>
-            <h4 class="caption"><b>Outcome:</b> AstraZeneca receives better value from their products, Evinova gains new revenue stream, users can design and optimise better studies</h4>
+            <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Rapid prototyping</h4>
+            <h4 class="caption"><b>Outcome:</b> Successful pilot with big pharma goes live, Evinova gains new revenue stream, Users gain better tools to design better studies</h4>
          </div>
       </div>
    </div>
@@ -34,19 +34,100 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            Between 2019-2022 AstraZeneca developed a large portfolio of internal digital health solutions, addressing multiple use cases in clinical trial design, deployment, and conduct. One of them was Merlin, a successful When I joined in 2023, the Merlin team was about to start the effort of consolidating four disparate solutions in study design and planning into one application, to reduce the ongoing cost-to-serve and maintenance overheads.
+            When AstraZeneca launched Evinova, a health-tech business on a mission to market AZ's digital health R&D portfolio, <a href="/case-studies/merlin">Merlin</a> was not ready to be commercilised due to high levels of tech debt and deep customisation to AZ's own governance processes. 
          </p>
          <p>
-            In the background, the company also started to plan to launch a health-tech spinout from AstraZeneca that would take its best internal digital products to the market.
+            Based on our strategic research, I also knew that Merlin was focusing on study optimisation when it was already too late in the governance process to generate major benefits — study design was already defined and costs locked in. The new product had to accommodate a shift in focus to the early stages of study design, where we could make a real difference.
+         </p>
+         <p>
+            This was a classic 0-to-1 challenge with the aim to launch to an early adopter within a year. The new product had to be versatile to accommodate various processes across pharma customers, flexible to support optimisation for multiple of study types and shapes, and easy to use to win the hearts of the actual users (not only corporate buyers).
          </p>
          <h3>My Approach</h3>
          <p>
+            As part of the cross-functional product leadership team, I shaped product strategy, directed the design and delivery, and measured the success of the new software product which we called Study Design and Planning (SDP).
          </p>
+         <p>
+            We started by sprinting with the team to capture the initial vision of SDP. The first draft was in the form of a storyboard and a set of speculative screens. This helped align on the vision internally and communicate it externally.
+         </p>
+      </div>
+   
+
+      <div class="container-two-thirds shift">
+         <div class="block-margin">
+            <img src="/img/cases/evinova/evinova-market6.png" class="shadow">
+         </div>
+      </div>
+      <div class="container-one-third shift-back">
+         <div class="caption-margin">
+            <h4 class="caption">
+               I ran a 2-week market research exercise, interviewing 9 clinical ops leaders from the top 20 pharma companies. 
+            </h4>
+            <h4 class="caption"> 
+               Using the storyboard and screens as stimulus, I confirmed our assumptions about the unmet market need, the value proposition, and the key features that would make SDP a success.
+            </h4>
+         </div>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <p>
+            With this initial validation in place, I started to direct the team to translate our vision into progress. We completed a 3-month run of iterative design reinforced by continuous testing, comprising 8 rounds of user research with 40+ users. Validated designs moved into development and the key product features planned for the pilot (for example Schedule of Activities, Enpoint Selection, or Collaboration) went live within 6 months. 
+         </p>
+         <p>
+            Throghout this, we learnt that:
+         </p>
+         <ul>
+            <li>Convention is king — don't reinvent things that work well and are well known and established in the industry; leverage convention instead</li>
+            <li>Transformational opportunities for efficiency gains in a legacy industry such as pharma is not to save a few seconds or clicks on individual tasks in digital tools, but to streamline corporate decision-making and minimise the wait time between decision points ('white space')</li>
+            <li>Pharma users and buyers prefer quality over quantity — getting one excellent tool is better than multiple average ones</li>
+         </ul>
+         <p>
+            I also introduced new design methods to accelerate our time from concept to insight, including rapid prototyping using traditional methods (react + Netlify) and GenAI (Vercel's v0 and Figma Make). I evaluated the pros and cons of using GenAI for design concept making and testing in <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI">this post</a> on LinkedIn.
+         </p>
+         <p>
+            collaboration
+         </p>
+      </div>
+         
+
+      <div class="container-two-thirds shift">
+         <div class="block-margin">
+            <img src="/img/cases/evinova/evinova-teaser3.png" class="image-gallery shadow">
+         </div>
+      </div>
+      <div class="container-one-third shift-back">
+         <div class="caption-margin">
+            <h4 class="caption">
+               In parallel to development, I worked with the commercial team to tell the story of the new product, its value proposition, and generate excitement for our producy roadmap amongst the early adopters.
+            </h4>
+         </div>
+      </div>
+
+
+      <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
+            SDP is a new category-defining SaaS B2B product that helps study sponsors design better clinical trials faster, and with more confidence and precision. It is designed to facilitate collaboration and seamless hand-off between clinical sciences, clinical operations and other specialist teams shaping the study.
          </p>
+         <p>
+            SDP has been launched as an alpha pilot in sprint 2025. My team designed powerful study design features, such as the Schedule of Activities, Eligibility Criteria Selector, or Study Schema Builder that allow users to design new studies in a digitised format from the very beginning.
+         </p>
+         <p>
+            Digitising gives study teams access to a range of design-driven metrics from day 1. This includes low-input ballparks for predicting study properties before its shape is well defined, and precise estimation tools to calculate study cost, recruitment duration, patient burden and carbon emission for when the study protocol is already well defined. 
+         </p>
+         <p>
+            Having access to these metrics allows study teams to make informed decisions about the study design and its feasibility, and to optimise the study before it is submitted for approval.
+         </p>
+
          <h3>The Result</h3>
          <p>
+            The SDP pilot went live with a top-10 pharma company in spring 2025 and received fantastic reviews. The same product was piloted with AstraZeneca in summer 2025 and received CSAT scores of 80 and UMUX-Lite of 63.5, highlighting the potential for setting a new standard in the clinical trial tech SaaS space.
+         </p>
+         <p>
+            SDP opened a new revenue stream for Evinova. Clinical study optimisation is a desirable offering for pharma companies that navigate a turbulent 2025 landscape of regulatory changes, tariffs, and novel demands for efficiency and de-risked investment.  
+         </p>
+         <p>
+
          </p>
       </div>
    </div>
