2nd draft of EV case

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -23,7 +23,7 @@ label: case-study
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Rapid prototyping</h4>
-            <h4 class="caption"><b>Outcome:</b> Successful pilot with big pharma goes live, Evinova gains new revenue stream, Users gain better tools to design better studies</h4>
+            <h4 class="caption"><b>Outcome:</b> Successful pilot with top-10 pharma, Evinova gains new revenue stream, Enhanced study design tools, CSAT score at 80%</h4>
          </div>
       </div>
    </div>
@@ -34,20 +34,22 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            When AstraZeneca launched Evinova, a health-tech business on a mission to market AZ's digital health R&D portfolio, <a href="/case-studies/merlin">Merlin</a> was not ready to be commercilised due to high levels of tech debt and deep customisation to AZ's own governance processes. 
+            When AstraZeneca launched Evinova to commercialise their digital health R&D portfolio, the existing <a href="/case-studies/merlin">Merlin</a> platform wasn't market-ready due to significant tech debt and heavy customisation for AZ's governance processes.
          </p>
          <p>
-            Based on our strategic research, I also knew that Merlin was focusing on study optimisation when it was already too late in the governance process to generate major benefits — study design was already defined and costs locked in. The new product had to accommodate a shift in focus to the early stages of study design, where we could make a real difference.
+            Research revealed Merlin focused on study optimisation too late in the process — after design decisions and costs were locked in. We needed to shift focus to early-stage study design for maximum impact. 
+            <!-- Our insight told us this must involve expanding to more user types beyond clinops to clindev . -->
+            <!-- define who clindev and clinops are, and establish shorthands -->
          </p>
          <p>
-            This was a classic 0-to-1 challenge with the aim to launch to an early adopter within a year. The new product had to be versatile to accommodate various processes across pharma customers, flexible to support optimisation for multiple of study types and shapes, and easy to use to win the hearts of the actual users (not only corporate buyers).
+            A classic 0-to-1 challenge: launch within a year to early adopters. The product needed versatility across pharma processes, flexibility for multiple study types, and usability that appeals to actual users, not just corporate buyers.
          </p>
          <h3>My Approach</h3>
          <p>
-            As part of the cross-functional product leadership team, I shaped product strategy, directed the design and delivery, and measured the success of the new software product which we called Study Design and Planning (SDP).
+            As part of the cross-functional product leadership team, I shaped strategy, directed design and delivery, and measured success of our new software product: Study Design and Planning (SDP).
          </p>
          <p>
-            We started by sprinting with the team to capture the initial vision of SDP. The first draft was in the form of a storyboard and a set of speculative screens. This helped align on the vision internally and communicate it externally.
+            We began with a team sprint to capture SDP's vision through storyboards and speculative screens, crucial for internal alignment and external communication.
          </p>
       </div>
    
@@ -60,10 +62,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I ran a 2-week market research exercise, interviewing 9 clinical ops leaders from the top 20 pharma companies. 
-            </h4>
-            <h4 class="caption"> 
-               Using the storyboard and screens as stimulus, I confirmed our assumptions about the unmet market need, the value proposition, and the key features that would make SDP a success.
+               I ran a 2-week market research exercise, interviewing 9 clinical ops leaders from top-20 pharma companies. I validated our assumptions about market need, value proposition, and critical features using our storyboard materials.
             </h4>
          </div>
       </div>
@@ -71,21 +70,22 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            With this initial validation in place, I started to direct the team to translate our vision into progress. We completed a 3-month run of iterative design reinforced by continuous testing, comprising 8 rounds of user research with 40+ users. Validated designs moved into development and the key product features planned for the pilot (for example Schedule of Activities, Enpoint Selection, or Collaboration) went live within 6 months. 
+            With validation secured, I directed the team through 3 months of iterative design and continuous testing: 8 rounds of research with 40+ ClinOps and ClinDev users. Key pilot features like Schedule of Activities, Study Metrics, and Collaboration launched within 6 months.
          </p>
          <p>
-            Throghout this, we learnt that:
+            Key insights::
          </p>
          <ul>
-            <li>Convention is king — don't reinvent things that work well and are well known and established in the industry; leverage convention instead</li>
-            <li>Transformational opportunities for efficiency gains in a legacy industry such as pharma is not to save a few seconds or clicks on individual tasks in digital tools, but to streamline corporate decision-making and minimise the wait time between decision points ('white space')</li>
-            <li>Pharma users and buyers prefer quality over quantity — getting one excellent tool is better than multiple average ones</li>
+            <li>Leverage industry conventions rather than reinventing established workflows
+            </li>
+            <li>True transformation in enterprise pharma comes from streamlining decision-making and reducing wait times between decision points, not saving clicks</li>
+            <li>Quality trumps quantity: one excellent tool beats multiple average ones</li>
          </ul>
          <p>
-            I also introduced new design methods to accelerate our time from concept to insight, including rapid prototyping using traditional methods (react + Netlify) and GenAI (Vercel's v0 and Figma Make). I evaluated the pros and cons of using GenAI for design concept making and testing in <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI">this post</a> on LinkedIn.
+            To accelerate our team's concept-to-insight cycles, I incorporated rapid prototyping methods combining traditional tools (React + Netlify) with novel GenAI approached (Vercel's v0, Figma Make). Here's <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI"></a>my LinkedIn post</a> with GenAI evaluation.
          </p>
          <p>
-            collaboration
+            <!-- add para about how we planned to incentivise collaboration -->
          </p>
       </div>
          
@@ -98,7 +98,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               In parallel to development, I worked with the commercial team to tell the story of the new product, its value proposition, and generate excitement for our producy roadmap amongst the early adopters.
+               Simultaneously, I collaborated with the commercial teams to craft the product story and value proposition, building excitement among early adopters. <!-- add mention about roadmap? -->
             </h4>
          </div>
       </div>
@@ -107,24 +107,21 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
-            SDP is a new category-defining SaaS B2B product that helps study sponsors design better clinical trials faster, and with more confidence and precision. It is designed to facilitate collaboration and seamless hand-off between clinical sciences, clinical operations and other specialist teams shaping the study.
+            SDP helps study sponsors design superior clinical trials with greater speed, confidence, and precision while facilitating seamless collaboration across ClinDev, ClinOps, and other SME teams. Featuring powerful design tools, including Schedule of Activities, Eligibility Criteria Selector, and Study Schema Builder, it equips teams with tools to digitise study designs from inception.
          </p>
          <p>
-            SDP has been launched as an alpha pilot in sprint 2025. My team designed powerful study design features, such as the Schedule of Activities, Eligibility Criteria Selector, or Study Schema Builder that allow users to design new studies in a digitised format from the very beginning.
+            Digital-first design provides immediate access to predictive metrics from low-input estimates for early concepts to precise calculations of cost, recruitment timeline, patient burden, and carbon emissions based on complete protocols.
          </p>
          <p>
-            Digitising gives study teams access to a range of design-driven metrics from day 1. This includes low-input ballparks for predicting study properties before its shape is well defined, and precise estimation tools to calculate study cost, recruitment duration, patient burden and carbon emission for when the study protocol is already well defined. 
-         </p>
-         <p>
-            Having access to these metrics allows study teams to make informed decisions about the study design and its feasibility, and to optimise the study before it is submitted for approval.
+            These insights help ClinDev and ClinOps users make informed decisions about study design, feasibility, and optimisation before costs get locked in by regulatory submissions.
          </p>
 
          <h3>The Result</h3>
          <p>
-            The SDP pilot went live with a top-10 pharma company in spring 2025 and received fantastic reviews. The same product was piloted with AstraZeneca in summer 2025 and received CSAT scores of 80 and UMUX-Lite of 63.5, highlighting the potential for setting a new standard in the clinical trial tech SaaS space.
+            The top-10 pharma pilot launched in spring 2025 to excellent reviews. AstraZeneca's summer pilot achieved CSAT scores of 80 and UMUX-Lite of 63.5, demonstrating potential to set a new standard in the trial tech SaaS space.
          </p>
          <p>
-            SDP opened a new revenue stream for Evinova. Clinical study optimisation is a desirable offering for pharma companies that navigate a turbulent 2025 landscape of regulatory changes, tariffs, and novel demands for efficiency and de-risked investment.  
+            SDP created a new revenue stream for Evinova, as pharma companies seek optimisation solutions amid 2025's challenging landscape of regulatory changes, tariffs, and pressure for efficient, de-risked investments.
          </p>
          <p>
 
