--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -23,7 +23,7 @@ label: case-study
             <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.evinova.company }}</h4>
             <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.evinova.year }}</h4> -->
             <h4 class="caption"><b>My contributions:</b> Product strategy, Design leadership, Team leadership, Market research, Rapid prototyping</h4>
-            <h4 class="caption"><b>Outcome:</b> Successful pilot with top-10 pharma, Evinova gains new revenue stream, Enhanced study design tools, CSAT score at 80%</h4>
+            <h4 class="caption"><b>Outcome:</b> Successful pilot with top-10 pharma, Evinova gains new revenue stream, Enhanced study design tools, CSAT score at 80</h4>
          </div>
       </div>
    </div>
@@ -32,6 +32,34 @@ label: case-study
 
    <div class="container">
       <div class="container-two-thirds shift">
+         <p>
+            <i>Please help me help my patients!</i>
+         </p>
+         <p>
+            I heard this plea from the paediatric clinical trial site team at the Sant Joan de Déu hospital in Barcelona in summer 2024.
+         </p>
+         
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <div class="block-margin">
+            <img src="/img/cases/evinova/evinova-site3.png" class="shadow">
+         </div>
+      </div>
+      <div class="container-one-third shift-back">
+         <div class="caption-margin">
+            <h4 class="caption">
+               All over the world, clinical trial sites and patients struggle with the escalating complexity and burden of trial protocols. <a href="https://f.hubspotusercontent10.net/hubfs/9468915/TuftsCSDD_June2021/pdf/Rising+Protocol+Design+Complexity+is+Driving+Rapid+Growth+in+Clinical+Trial+Data+Volume++++++++++.pdf">Tufts reported</a> a staggering inflation in the number of procedures per trial, which pushes more burden onto patients and sites, and increases the costs of new medicines. 
+            </h4>
+         </div>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <p>
+            How can we reverse this trend? How can we improve access to life-saving medicine and effectiveness of clinical trials?
+         </p>
          <h3>The Challenge</h3>
          <p>
             When AstraZeneca launched Evinova to commercialise their digital health R&D portfolio, the existing <a href="/case-studies/merlin">Merlin</a> platform wasn't market-ready due to significant tech debt and heavy customisation for AZ's governance processes.
@@ -118,7 +146,7 @@ label: case-study
 
          <h3>The Result</h3>
          <p>
-            The top-10 pharma pilot launched in spring 2025 to excellent reviews. AstraZeneca's summer pilot achieved CSAT scores of 80 and UMUX-Lite of 63.5, demonstrating potential to set a new standard in the trial tech SaaS space.
+            The top-10 pharma SDP pilot launched in spring 2025 to excellent reviews. AstraZeneca's summer SDP pilot achieved CSAT score of 80 and UMUX-Lite of 63.5, demonstrating potential to set a new standard in the trial tech space (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23).
          </p>
          <p>
             SDP created a new revenue stream for Evinova, as pharma companies seek optimisation solutions amid 2025's challenging landscape of regulatory changes, tariffs, and pressure for efficient, de-risked investments.
