Redraft EV case summary

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -11,9 +11,9 @@ label: case-study
             <h3><a href="/case-studies/evinova/">{{ site.data.pages.case-study.evinova.heading }}</a></h3>
             <h4>at {{ site.data.pages.case-study.evinova.company }} &nbsp; &bull; &nbsp; {{ site.data.pages.case-study.evinova.year }}</h4>
             <p>
-               I spearheaded the design, development, and commercial launch of a new category-defining SaaS B2B product for Evinova, AstraZeneca's health-tech spinout.
+               I spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B product that aims to solve the complexity crisis in clinical development.
             </p>
-            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-front2.png" class=""></a>
+            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site5.png" class=""></a>
          </div>
 
 
