--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -33,7 +33,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <p>
-            <i>Please help me help my patients!</i>
+            <i>— Please help me help my patients!</i>
          </p>
          <p>
             This plea from Barcelona's Sant Joan de Déu pediatric clinical trial team in summer 2024 crystallised a global crisis: clinical trials are drowning in complexity. <a href="https://f.hubspotusercontent10.net/hubfs/9468915/TuftsCSDD_June2021/pdf/Rising+Protocol+Design+Complexity+is+Driving+Rapid+Growth+in+Clinical+Trial+Data+Volume++++++++++.pdf">Tufts research</a> revealed a staggering increase in the number of procedures per study and per patient, which puts even more burden on patients and sites.
@@ -43,7 +43,10 @@ label: case-study
          </p>
          <h3>The Root Cause</h3>
          <p>
-            Our research has shown that trial designs suffers from unverified assumptions, copy-pasting from old protocols, decision-making insulated from patient voice, and gated governance processes. 
+            Our research has shown that trial designs suffers from unverified assumptions, decision-making insulated from patient voice, gated governance processes, and copy-pasting from old protocols. 
+         </p>
+         <p>
+            We heard about a study recruiting 8-year-olds with questionnaires about the use of alcohol and contraception — thoughtlessly copied from another protocol.
          </p>
       </div>
 
@@ -56,7 +59,10 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               The way pharma companies set up their teams and run the study design process exacerbates the problem.
+               The way pharma companies set up their study teams and run the study design process exacerbates the problem.
+            </h4>
+            <h4 class="caption">
+               Teams rely on structured handoffs. This kills collaboration which is critical for holistic early-stage optimisation.
             </h4>
          </div>
       </div>
@@ -64,32 +70,27 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            Clinical development (ClinDev) and clinical operations (ClinOps) tams rarely collaborate during the critical early stages of study creation when design choices impact study complexity and feasibility the most, and when cost of modifications is still low.
-         </p>
-          <p>
-            Clinical development (ClinDev) and clinical operations (ClinOps) tams rarely collaborate during the critical early stages of study creation when design choices impact study complexity and feasibility the most, and when cost of modifications is still low.
+            Besides that, clinical development (ClinDev) and clinical operations (ClinOps) teams rarely collaborate during the critical early stages of study creation when design choices impact study complexity and feasibility the most, and when the cost to modify is still low.
          </p>
          <p>
-            So why care? Firstly, more demanding and burdensome trials mean fewer patients can benefit from new treatments, and those who have no choice are faced with a daunting experience. Secondly, over-complex trials are harder to run, more expensive, and riskier with delays and higher drop-out rates — and this means longer waits and higher cost of new medicines for us all.
+            So why care?
          </p>
-
+         <p>
+            Firstly, more demanding and burdening trials mean fewer patients can benefit from new treatments — and those who have no choice are faced with a daunting experience. Secondly, over-complex trials are harder to run, more expensive and riskier due to delays and higher drop-out rates — and this means longer waits, higher cost of medicines for all of us, and ultimately fewer lives saved.
+         </p>
          <h3>The Challenge</h3>
-         <p>
-            Create a win-win-win solution — better access and reduced burden for patients, simplified workflows for sites, and faster, cheaper trials for sponsors.
-         </p>
-         <h3>The Opportunity</h3>
-         <p>
-            Build tools that quantify complexity, burden, and cost at concept stage when changes are still feasible, enabling clindev-clinops collaboration before protocols and budgets lock in.
+          <p>
+            We need clinical trials that are simpler, more effective, and deliver better outcomes for patients, sites, sponsors, and society. And we know we can get there by helping study teams design trials from the outset, while holistic optimisation is possible and worthwhile.
          </p>
          <p>
-            A classic 0-to-1 challenge: launch within a year to early adopters with versatility across pharma processes, flexibility for multiple study types, and usability that appeals to actual users, not just corporate buyers.
+            AstraZeneca launched its health-tech company, Evinova, on a mission to address this challenge. Earlier, I helped build <a href="/case-studies/merlin">Merlin</a> — AZ's precursor to solving this problem — but it was not market-ready due to high levels of tech debt and tailoring to AZ.
+         </p>
+         <p>
+            So it became a classic 0-to-1 challenge: develop a new product and launch to early adopters within a year. Build a value proposition for both ClinDev and ClinOps users that will foster collaboration and holistic optimisation in the early stages of the clinical study design process. And do it all while detatching from a global corporation, facilitating multiple team reorgs, and driving AI adoption. 
          </p>
          <h3>My Approach</h3>
          <p>
-            As part of the cross-functional product leadership team, I shaped strategy, directed design and delivery, and measured success of our new software product: Study Design and Planning (SDP).
-         </p>
-         <p>
-            We began with a team sprint to capture SDP's vision through storyboards and speculative screens, crucial for internal alignment and external communication.
+            As part of the cross-functional product leadership team, I shaped strategy, directed design and delivery, and measured success of Evinova's new digital product: Study Design and Planning (SDP).
          </p>
       </div>
    
@@ -97,12 +98,13 @@ label: case-study
       <div class="container-two-thirds shift">
          <div class="block-margin">
             <img src="/img/cases/evinova/evinova-market6.png" class="shadow">
+            <h5 class="secondary-annotation">Storyboard drawings by Florencia Novello</h5>
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I ran a 2-week market research exercise, interviewing 9 clinical ops leaders from top-20 pharma companies. I validated our assumptions about market need, value proposition, and critical features using our storyboard materials.
+               I began by capturing SDP vision using storyboards and speculative screens for internal alignment and external communication.
             </h4>
          </div>
       </div>
@@ -110,10 +112,13 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            With validation secured, I directed the team through 3 months of iterative design and continuous testing: 8 rounds of research with 40+ ClinOps and ClinDev users. Key pilot features like Schedule of Activities, Study Metrics, and Collaboration launched within 6 months.
+            Using the storyboards as stimulus, I ran a 2-week market research exercise, interviewing 9 ClinOps leaders from top-20 pharma companies. I validated our value proposition focusing on enabling cross-functional collaboration and early-stage optimisation. 
          </p>
          <p>
-            Key insights::
+            With more confidence in our product bet, I directed the team through 3 months of iterative design and continuous testing: 8 rounds of research with 40+ ClinOps and ClinDev users. Key pilot features like Schedule of Activities, Collaboration, and Study Metrics launched within 6 months.
+         </p>
+         <p>
+            Key insights:
          </p>
          <ul>
             <li>Leverage industry conventions rather than reinventing established workflows
