Add post to EV case

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -90,7 +90,10 @@ label: case-study
          </p>
          <h3>My Approach</h3>
          <p>
-            As part of the cross-functional product leadership team, I shaped strategy, directed design and delivery, and measured success of Evinova's new digital product: Study Design and Planning (SDP).
+            As part of the cross-functional product leadership team, I shaped product strategy, directed design and delivery, and measured the success of our solution, Study Design and Planning (SDP).
+         </p>
+         <p>
+            I began by capturing SDP vision using storyboards and speculative screens for internal alignment and external communication.
          </p>
       </div>
    
@@ -104,7 +107,10 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I began by capturing SDP vision using storyboards and speculative screens for internal alignment and external communication.
+               Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing 9 ClinOps leaders from top-20 pharma companies.
+            </h4>
+            <h4 class="caption">
+               I validated our value proposition focusing on enabling team collaboration and early-stage optimisation. 
             </h4>
          </div>
       </div>
@@ -112,10 +118,24 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            Using the storyboards as stimulus, I ran a 2-week market research exercise, interviewing 9 ClinOps leaders from top-20 pharma companies. I validated our value proposition focusing on enabling cross-functional collaboration and early-stage optimisation. 
+            With more confidence in our product bet, I directed the team through 8 rounds of iterative design and continuous testing with 40+ ClinOps and ClinDev users. 
          </p>
-         <p>
-            With more confidence in our product bet, I directed the team through 3 months of iterative design and continuous testing: 8 rounds of research with 40+ ClinOps and ClinDev users. Key pilot features like Schedule of Activities, Collaboration, and Study Metrics launched within 6 months.
+         <p>  
+            To accelerate our team's concept-to-insight cycles, I incorporated rapid prototyping methods combining traditional tools (React + Netlify) with novel GenAI approached (Vercel's v0, Figma Make). Here's my <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI">LinkedIn post</a> with GenAI evaluation.
+         </p>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <div class="block-margin">
+            <img src="/img/cases/evinova/evinova-post.png" class="shadow">
+         </div>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <p>   
+            Key pilot features like Schedule of Activities, Collaboration, and Study Metrics launched within 6 months.
          </p>
          <p>
             Key insights:
@@ -127,7 +147,7 @@ label: case-study
             <li>Quality trumps quantity: one excellent tool beats multiple average ones</li>
          </ul>
          <p>
-            To accelerate our team's concept-to-insight cycles, I incorporated rapid prototyping methods combining traditional tools (React + Netlify) with novel GenAI approached (Vercel's v0, Figma Make). Here's <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI"></a>my LinkedIn post</a> with GenAI evaluation.
+            
          </p>
          <p>
             <!-- add para about how we planned to incentivise collaboration -->
