--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -118,7 +118,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Email of appreciation from Ida Sim, one of Vivli’s co-founders.
+               Email of appreciation from Ida Sim, one of Vivli co-founders.
             </h4>
          </div>
       </div>
@@ -127,7 +127,7 @@ label: case-study
    {% include divider.html %}
 
    <div class="container">
-      <h4>Appendix — Notes by the Science Practice team</h4>
+      <h4>Appendix — Notes by the Science Practice team</h4>
       <h2>Learnings from prototyping for research and collaboration</h2>
    </div>
 
