--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -81,51 +81,80 @@ label: case-study
                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
          </div>
       </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow">
-            <!-- <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow"> -->
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               ImmTAX engineering and antigen presentation on cell survace.
-            </h4>
-         </div>
-      </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow">
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               ImmTAX mediates in T cell killing of a cancer cell (with cytokine release).
-            </h4>
-         </div>
-      </div>
-
-      <div class="container-two-thirds shift">
-         <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow">
-         </div>
-      </div>
-      <div class="container-one-third shift-back">
-         <div class="caption-margin">
-            <h4 class="caption">
-               I designed the new Immunocore logotype in various colour versions accompanied by the brand manual defining how to use new brand assets.
-            </h4>
-         </div>
-      </div>
-
    </div>
+
+
+   {% include divider.html %}
+
+   <div class="container">
+      <h4>Appendix</h4>
+      <h2>Immunocore science communication and brand assets</h2>
+   </div>
+
+   <span class="appendix">
+      <div class="container">            
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  ImmTAX engineering, antigen presentation on cell survace, and cross-presentation.
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-2.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  ImmTAX mediates in T cell killing of a cancer cell (with cytokine release).
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-mage-killing.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-serial-killing.jpg" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  MAGE killing and serial killing or cancer cells (red) by ImmTAX-mediated T cells (blue).
+               </h4>
+            </div>
+         </div>
+
+         <div class="container-two-thirds shift">
+            <div class="block-margin">
+               <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow">
+            </div>
+         </div>
+         <div class="container-one-third shift-back">
+            <div class="caption-margin">
+               <h4 class="caption">
+                  I designed the new Immunocore logotype in various colour versions accompanied by the brand manual defining how to use new brand assets.
+               </h4>
+            </div>
+         </div>
+
+      </div>
+   </span>
+
 </section>
