Add more new content to EV case

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -56,7 +56,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-insights2.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-insights3.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -118,15 +118,15 @@ label: case-study
       </div>
 
 
-            <div class="container-two-thirds shift">
+      <div class="container-two-thirds shift">
          <p>
             Through our research, we learnt that:
          </p>
          <ul>
-            <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it</li>
-            <li>ClinDev teams copy-paste parts of old protocols to reduce regulatory risk, not to save time drafting the protocol</li>
-            <li>ClinDev-ClinOps collaboration depends on upstream adoption; for that ClinDev teams must get immediate personal value from the tool (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking)</li>
-            <li>Pharma can gain efficiency by streamlining decision-making, expediting feedback, and compressing governance processes</li>
+            <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it.</li>
+            <li>ClinDev teams copy-paste parts of old protocols to reduce regulatory risk, not to save time drafting the protocol.</li>
+            <li>ClinDev-ClinOps collaboration tools depend on upstream adoption; to buy in, ClinDev teams must get immediate personal value from the tool (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking).</li>
+            <li>Pharma can gain efficiency by streamlining decision-making, expediting feedback, and compressing governance processes (e.g. by maximising iteration cycles prior to review boards).</li>
          </ul>
          <p>
             <!-- Collaboration between ClinDev and ClinOps does not work because ClinDev start their work in MS Office tools and in unstructures documents because its easy for them and flexible (MS Office impose no constraints) but then when when handoff to ClinOps, ClinOps struggle with unstructured artefacts from Word and Excel because there is no way to easily calculate metrics for things that are unstructured, and ClinOps need to generate proxies to calculate cost and duration, and because of that their metrics become detatched from the design and when design changes, they need to update metrics manually and its just a very inefficient and frustrating process where there is high risk of human error. If ClinDev agreed to start working in the same tool where ClinOps will calculate their metrics, the problem will go away - there won't be a need to calculate metrics using inaccurate proxies and all metrics will be linked to the design, updating together with the design changes. But the challenge is so get ClinDev to use the design tools which offer less flexibility but for the better long-term benefit for ClinOps and ClinDev. And we learnt that the way to incentivise ClinDev to use the structured design tools was to offer them the metrics that they care about when designing the study in the tool (such as Patient Burden scores) or features that help make better choices about the assessments they use (e.g. company-vetted templates, assessments linked to selected endpoints) or features that reduce risk (e.g. flagging assessments that are not linked to endpoints or flagging when study arms have undesirable discrepancies). -->
@@ -146,10 +146,37 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            With more confidence in our product bet, I directed the team through 8 rounds of iterative design and continuous testing with 40+ ClinOps and ClinDev users. 
+            These insights shaped our value proposition and product strategy.
+         </p>
+         <p>
+            I spearheaded requirement gathering, design, and implementation of key clinical documents that form the backbone of a digital study protocol: Schedule of Activities (SoA), Eligibility Criteria, Study Schema, Objectives and Endpoints. These components enable structured study design aligned to <a href="https://www.cdisc.org/ddf">industry standard</a>, facilitate real-time metric calculations, and foster cross-team collaboration. 
+         </p>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <div class="block-margin">
+            <img src="/img/cases/evinova/evinova-soa2.png" class="shadow">
+         </div>
+      </div>
+      <div class="container-one-third shift-back">
+         <div class="caption-margin">
+            <h4 class="caption">
+               I also led strategic design of the patient experience metric. It quantifies the burden and duration of cilnical activites for patients per clinical procedure.
+            </h4>
+            <h4 class="caption">
+               This and other metrics are shown to ClinDevs as they edit the SoA to inform critical in-the-moment decision making.
+            </h4>
+         </div>
+      </div>
+
+
+      <div class="container-two-thirds shift">
+         <p>
+            With greater confidence in our product bet and solution scope, I directed the team through 8 rounds of iterative design and continuous testing with 40+ ClinOps and ClinDev users. 
          </p>
          <p>  
-            To accelerate our team's concept-to-insight-to-decision cycles, I incorporated rapid code-based prototyping methods leveraging traditional approaches (React + Netlify) and novel GenAI tools (Vercel v0, Figma Make). This gave us access to user-derived insights that were more reliable and quicker to generate. 
+            To accelerate our concept-to-insight-to-decision cycles, I incorporated rapid code-based prototyping methods leveraging traditional approaches (React + Netlify) and novel GenAI tools (Vercel v0, Figma Make). This gave us access to user-derived insights that were more reliable and quicker to generate. 
          </p>
       </div>
 
@@ -169,17 +196,27 @@ label: case-study
             </h4>
          </div>
       </div>
+
+
+      <div class="container-two-thirds shift">
+         <p>
+            Simultaneously, I collaborated with the commercial teams to craft the product story and value proposition, building excitement amongst potential early adopters.
+         </p>
+         <p>
+            This involved showing compelling demos of the product alongside our proven achievements in <a href="/case-studies/merlin">Meriln</a>, a strategic product roadmap, and a set of work-in-progress concepts already in development.
+         </p>
+      </div>
          
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-teaser3.png" class="image-gallery shadow">
+            <img src="/img/cases/evinova/evinova-teaser4.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Simultaneously, I collaborated with the commercial teams to craft the product story and value proposition, building excitement among early adopters. <!-- add mention about roadmap? -->
+               One of the work-in-progress ideas was an Objectives and Endpoints view that ClinDev and ClinOps will use to negotiate and justify the ROI of each study endpoint.
             </h4>
          </div>
       </div>
