Minor copy change to EV case

--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -216,7 +216,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               One of the work-in-progress ideas was an Objectives and Endpoints view that ClinDev and ClinOps will use to negotiate and justify the ROI of each study endpoint.
+               One of the work-in-progress ideas was the Objectives & Endpoints view where ClinDev and ClinOps will negotiate and justify the ROI of each study endpoint.
             </h4>
          </div>
       </div>
