--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -91,7 +91,7 @@ label: case-study
          </p>
          <h3>My Approach</h3>
          <p>
-            As part of the cross-functional product leadership team, I shaped product strategy, directed design and delivery, and measured the success of our solution, Study Design and Planning (SDP).
+            As part of the cross-functional product leadership team, I shaped product strategy, directed design and delivery, and measured the success of our new solution, Study Design and Planning (SDP).
          </p>
          <p>
             My approach to designing the new solution was evidence-based, design-led, and iteration-driven, leveraging the latest AI tools that kept emerging during the project. 
@@ -126,7 +126,7 @@ label: case-study
             <li>Sponsor teams want to reduce protocol complexity but they need a reliable way to measure it.</li>
             <li>ClinDev teams copy-paste parts of old protocols to reduce regulatory risk, not to save time drafting the protocol.</li>
             <li>ClinDev-ClinOps collaboration tools depend on upstream adoption; to buy in, ClinDev teams must get immediate personal value from the tool (e.g. patient burden metrics, company-vetted templates, endpoint-assessment linking).</li>
-            <li>Pharma can gain efficiency by streamlining decision-making, expediting feedback, and compressing governance processes (e.g. by maximising iteration cycles prior to review boards).</li>
+            <li>Sponsors can gain efficiency by reducing 'white space' — the no-work and no-decision time between design activities, protocol reviews, and governance interactions.</li>
          </ul>
          <p>
             <!-- Collaboration between ClinDev and ClinOps does not work because ClinDev start their work in MS Office tools and in unstructures documents because its easy for them and flexible (MS Office impose no constraints) but then when when handoff to ClinOps, ClinOps struggle with unstructured artefacts from Word and Excel because there is no way to easily calculate metrics for things that are unstructured, and ClinOps need to generate proxies to calculate cost and duration, and because of that their metrics become detatched from the design and when design changes, they need to update metrics manually and its just a very inefficient and frustrating process where there is high risk of human error. If ClinDev agreed to start working in the same tool where ClinOps will calculate their metrics, the problem will go away - there won't be a need to calculate metrics using inaccurate proxies and all metrics will be linked to the design, updating together with the design changes. But the challenge is so get ClinDev to use the design tools which offer less flexibility but for the better long-term benefit for ClinOps and ClinDev. And we learnt that the way to incentivise ClinDev to use the structured design tools was to offer them the metrics that they care about when designing the study in the tool (such as Patient Burden scores) or features that help make better choices about the assessments they use (e.g. company-vetted templates, assessments linked to selected endpoints) or features that reduce risk (e.g. flagging assessments that are not linked to endpoints or flagging when study arms have undesirable discrepancies). -->
@@ -210,7 +210,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-teaser4.png" class="image-gallery shadow">
+            <img src="/img/cases/evinova/evinova-teaser4.png" class="shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -225,24 +225,34 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Solution</h3>
          <p>
-            SDP helps study sponsors design superior clinical trials with greater speed, confidence, and precision while facilitating seamless collaboration across ClinDev, ClinOps, and other SME teams. Featuring powerful design tools, including Schedule of Activities, Eligibility Criteria Selector, and Study Schema Builder, it equips teams with tools to digitise study designs from inception.
+            We built Study Design and Planning to facilitate ClinDev-ClinOps collaboration, crucially in the early stages of study design when most optimisation can be achieved with least cost. Our value proposition addresses combined ClinDev and ClinOps needs, focusing on upstream adoption and ClinDev buy-in.
          </p>
          <p>
-            Digital-first design provides immediate access to predictive metrics from low-input estimates for early concepts to precise calculations of cost, recruitment timeline, patient burden, and carbon emissions based on complete protocols.
+            Patient experience metrics and endpoint-assessment linking help ClinDevs design patient-centric studies with only as few on-site activities as necessary. Pre-vetted templates remove the need to copy-paste from old protocols for risk avoidance. 
          </p>
          <p>
-            These insights help ClinDev and ClinOps users make informed decisions about study design, feasibility, and optimisation before costs get locked in by regulatory submissions.
+            For ClinOps, real-time cost, recruitment, and complexity metrics drive study optimisation before design choices are locked in.
          </p>
+         <p>
+            Next iterations of SDP will improve sponsor's overall efficiency. Specialised AI agents will facilitate protocol reviews, as often as needed to maximise study iteration between governance decision points. This will reduce the 'white space' in study design, driving down cost, risk of amendments, and complexity.
+         </p>
+         <p>
+            Through the use of comprehensive metrics, in-the-moment feedback, and fostering cross-functional collaboration, SDP gives sponsor teams powerful tools to measure, control, and reduce clinical trial complexity. 
+         </p>
+
 
          <h3>The Result</h3>
          <p>
-            The top-10 pharma SDP pilot launched in spring 2025 to excellent reviews. AstraZeneca's summer SDP pilot achieved CSAT score of 80 and UMUX-Lite of 63.5, demonstrating potential to set a new standard in the trial tech space (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23).
+            We launched SDP as a pilot in spring 2025 to a top-10 pharma early adopter and immediately collected excellent reviews.
          </p>
          <p>
-            SDP created a new revenue stream for Evinova, as pharma companies seek optimisation solutions amid 2025's challenging landscape of regulatory changes, tariffs, and pressure for efficient, de-risked investments.
+            AstraZeneca's own SDP pilot launched in summer 2025 achieved CSAT score of 80 and UMUX-Lite of 63.5, showing potential to set a new standard in the trial tech space (<a href="/case-studies/merlin">Merlin's</a> CSAT ceiling was 23).
          </p>
          <p>
-
+            SDP created a new diversified revenue stream for Evinova, as pharma companies seek optimisation solutions amid 2025's challenging landscape of regulatory changes, global trade tariffs, and pressures for greater efficiency and investments de-risking.
+         </p>
+         <p>
+            When I left Evinova in autumn 2025, SDP was gaining traction with multiple pharma companies, started delivering on its promise of reducing protocol complexity, and was on track to become an market leader in AI-first clinical trial design optimisation.
          </p>
       </div>
    </div>
